--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -554,7 +554,7 @@ li:hover ul#submenu {
   position: absolute;
   top: 50%;
   overflow: hidden;
-  background-image: url(/assets/images/left-arrow.png);
+  background-image: url(../images/left-arrow.png);
   background-repeat: no-repeat;
   z-index: 9999;
 }
@@ -566,7 +566,7 @@ li:hover ul#submenu {
   position: absolute;
   top: 50%;
   overflow: hidden;
-  background-image: url(/assets/images/right-arrow.png);
+  background-image: url(../images/right-arrow.png);
   background-repeat: no-repeat;
   z-index: 9999;
 }
@@ -1157,7 +1157,7 @@ li:hover ul#submenu {
   background-color: transparent;
   width: 100%;
   position: absolute;
-  background-image: url(/assets/images/quote.png);
+  background-image: url(../images/quote.png);
   background-size: contain;
   height: 40px;
   background-position: center;
@@ -1452,7 +1452,7 @@ li:hover ul#submenu {
       }
 
       ul {
-        list-style-image: url("assets/images/check-list.png");
+        list-style-image: url("../images/check-list.png");
         padding-left: 25px;
         margin-top: $mtop-45;
         li {
@@ -1709,33 +1709,33 @@ blockquote .small:before, blockquote footer:before, blockquote small:before {
 
 .slider-nav {
   .slick-next:focus {
-    background-image: url('assets/images/right-arrow-t.png');
+    background-image: url('../images/right-arrow-t.png');
   }
   .slick-next:hover {
-    background-image: url('assets/images/right-arrow-t.png');
+    background-image: url('../images/right-arrow-t.png');
   }
 }
 
 .slider-nav {
   .slick-prev:focus {
-    background-image: url('assets/images/left-arrow-t.png');
+    background-image: url('../images/left-arrow-t.png');
   }
 
   .slick-prev:hover {
-    background-image: url('assets/images/left-arrow-t.png');
+    background-image: url('../images/left-arrow-t.png');
   }
 }
 
 .slider-nav {
   .slick-prev {
-    background-image: url('assets/images/left-arrow-t.png');
+    background-image: url('../images/left-arrow-t.png');
     left: -10px;
   }
 }
 
 .slider-nav {
   .slick-next {
-    background-image: url('assets/images/right-arrow-t.png');
+    background-image: url('../images/right-arrow-t.png');
     right: -10px;
   }
 }
